@@ -39,8 +39,8 @@ extern "C"
 enum ld_plugin_status
 {
   LDPS_OK = 0,
-  LDPS_NO_SYMS,         // Attempt to get symbols that haven't been added.
-  LDPS_ERR,
+  LDPS_NO_SYMS,         /* Attempt to get symbols that haven't been added. */
+  LDPS_ERR
   /* Additional Error codes TBD.  */
 };
 
@@ -48,7 +48,7 @@ enum ld_plugin_status
 
 enum ld_plugin_api_version
 {
-  LD_PLUGIN_API_VERSION = 1,
+  LD_PLUGIN_API_VERSION = 1
 };
 
 /* The type of output file being generated by the linker.  */
@@ -57,7 +57,7 @@ enum ld_plugin_output_file_type
 {
   LDPO_REL,
   LDPO_EXEC,
-  LDPO_DYN,
+  LDPO_DYN
 };
 
 /* An input file managed by the plugin library.  */
@@ -92,7 +92,7 @@ enum ld_plugin_symbol_kind
   LDPK_WEAKDEF,
   LDPK_UNDEF,
   LDPK_WEAKUNDEF,
-  LDPK_COMMON,
+  LDPK_COMMON
 };
 
 /* The visibility of the symbol.  */
@@ -102,7 +102,7 @@ enum ld_plugin_symbol_visibility
   LDPV_DEFAULT,
   LDPV_PROTECTED,
   LDPV_INTERNAL,
-  LDPV_HIDDEN,
+  LDPV_HIDDEN
 };
 
 /* How a symbol is resolved.  */
@@ -117,7 +117,7 @@ enum ld_plugin_symbol_resolution
   LDPR_PREEMPTED_IR,
   LDPR_RESOLVED_IR,
   LDPR_RESOLVED_EXEC,
-  LDPR_RESOLVED_DYN,
+  LDPR_RESOLVED_DYN
 };
 
 /* The plugin library's "claim file" handler.  */
@@ -189,7 +189,7 @@ enum ld_plugin_level
   LDPL_INFO,
   LDPL_WARNING,
   LDPL_ERROR,
-  LDPL_FATAL,
+  LDPL_FATAL
 };
 
 /* Values for the tv_tag field of the transfer vector.  */
@@ -207,7 +207,7 @@ enum ld_plugin_tag
   LDPT_ADD_SYMBOLS,
   LDPT_GET_SYMBOLS,
   LDPT_ADD_INPUT_FILE,
-  LDPT_MESSAGE,
+  LDPT_MESSAGE
 };
 
 /* The plugin transfer vector.  */
