@@ -1,5 +1,9 @@
 2008-09-22 Rafael Espindola  <espindola@google.com>
 
+	* plugin-api.h: Copy from binutils' cvs.
+
+2008-09-22 Rafael Espindola  <espindola@google.com>
+
 	* lto-symtab.c (get_symbols, add_symbols): Update signature.
 	* plugin-api.h: Copy from binutils' cvs.
 
